kubectl_deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: court-list-mock-data
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - court-list-mock-data.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
    - host: court-list-mock-data.apps.live-1.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: court-list-mock-data
              servicePort: 8000
